# rust-graphics-play

./: Cargo.toml  README.md  flake.nix
data/: ABeautifulGame.glb
desktop/: Cargo.toml
desktop/src/: main.rs
headless/: Cargo.toml
headless/src/: main.rs
rust-graphics-play-core/: Cargo.toml
rust-graphics-play-core/src/: lib.rs
src/: main.rs
web/: Cargo.toml
web/src/: lib.rs
