[workspace]
members = [
    "rust-graphics-play-core",
    "desktop",
    "web", 
    "headless"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
winit = { version = "0.30" }
env_logger = "0.10"
log = "0.4"
wgpu = "26.0.1"
pollster = "0.3"
gltf = "1.4"
bytemuck = { version = "1.0", features = ["derive"] }
image = "0.25"

# WebAssembly dependencies
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window", 
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlRenderingContext",
] }
