[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-graphics-play-core = { path = "../rust-graphics-play-core" }

# Only build this crate for wasm32 targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# No dependencies needed for non-wasm targets since this crate won't be used


